# demo_web_shop

./: .env  .gitignore  README.md  example.env  pyproject.toml
data/: user_info.py
demo_web_shop/data/: user_info.py
demo_web_shop/utils/: attach.py  redefenitions.py
page_objects/: demo_web_shop.py
tests/api/: conftest.py  test_demowebshop_interactions.py  test_demowebshop_interactions_with_api.py
tests/api/models/: cart.py  demo_shop.py  demowebshop_api.py
tests/ui/: conftest.py  test_addition_to_cart_with_ui.py  test_interactions_with_the_cart.py  test_removing_from_cart_with_ui.py  test_user_profile.py
tests/ui/page_objects/: demo_web_shop.py  demowebshop_ui.py
utils/: attach.py  console_logs.py  redefenitions.py  url_parts.py
